--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1138,9 +1138,10 @@ form textarea {
 /*-------------------------------------*/
 
 /*---------------------------------------
-    Home Button
+  Home Button
 	Menu Button
 	Back Button
+  Theme Button
 ---------------------------------------*/
 #betta_home-button,
 #betta_back-button {
@@ -1166,6 +1167,35 @@ form textarea {
 
 #betta_home-button img {
   height: auto;
+}
+
+button.icon-button.simple,
+.dark button.icon-button.simple {
+  background: none;
+  box-shadow: none;
+  opacity: 0.4;
+}
+
+@media (hover: hover) {
+  button.icon-button.simple:hover,
+  .dark button.icon-button.simple:hover {
+    background: none;
+    opacity: 0.3;
+  }
+}
+
+button.icon-button.simple:active,
+.dark button.icon-button.simple:active {
+  opacity: 0.2;
+}
+
+#betta_theme-button {
+  position: fixed;
+  top: -0.25rem;
+  right: -0.25rem;
+  width: 3rem;
+  height: 3rem;
+  z-index: 15;
 }
 
 @media (max-width: 800px) {
