--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -816,7 +816,7 @@ header.hero > h1 {
 
 .dark #spinner {
   border-color: #757575;
-  background: #ffffff;
+  background: #212121;
 }
 
 @keyframes spin {
@@ -1472,8 +1472,8 @@ button.icon-button.simple:active,
 
 #betta_theme-button {
   position: fixed;
-  top: -0.25rem;
-  right: -0.25rem;
+  top: -0.5rem;
+  right: -0.5rem;
   width: 3rem;
   height: 3rem;
   z-index: 15;
