--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -515,7 +515,7 @@ header.hero > h1 {
 
 .dark #spinner {
   border-color: $dark-color-secondary;
-  background: $dark-color-main;
+  background: $dark-color-background;
 }
 
 @keyframes spin {
@@ -1191,8 +1191,8 @@ button.icon-button.simple:active,
 
 #betta_theme-button {
   position: fixed;
-  top: -0.25rem;
-  right: -0.25rem;
+  top: -0.5rem;
+  right: -0.5rem;
   width: 3rem;
   height: 3rem;
   z-index: 15;
