--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1202,6 +1202,25 @@ button.icon-button.simple:active,
   z-index: 15;
 }
 
+#betta_theme-button {
+  position: fixed;
+  top: -0.25rem;
+  right: -0.5rem;
+  width: 3rem;
+  height: 3rem;
+  z-index: 15;
+}
+
+#betta_theme-light-icon,
+.dark #betta_theme-dark-icon {
+  display: none;
+}
+
+#betta_theme-dark-icon,
+.dark #betta_theme-light-icon {
+  display: block;
+}
+
 @media (max-width: 800px) {
   #betta_menu-button,
   #betta_back-button {
