--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1169,46 +1169,9 @@ form textarea {
   height: auto;
 }
 
-button.icon-button.simple,
-.dark button.icon-button.simple {
-  background: none;
-  box-shadow: none;
-  opacity: 0.5;
-}
-
-.dark button.icon-button img {
-  filter: brightness(1);
-}
-
-@media (hover: hover) {
-  button.icon-button.simple:hover,
-  .dark button.icon-button.simple:hover {
-    background: none;
-    opacity: 1;
-  }
-}
-
-button.icon-button.simple:active,
-.dark button.icon-button.simple:active {
-  opacity: 0.75;
-}
-
 #betta_theme-button {
-  position: fixed;
-  top: -0.25rem;
-  right: -0.5rem;
   width: 3rem;
   height: 3rem;
-  z-index: 15;
-}
-
-#betta_theme-button {
-  position: fixed;
-  top: -0.25rem;
-  right: -0.5rem;
-  width: 3rem;
-  height: 3rem;
-  z-index: 15;
 }
 
 #betta_theme-light-icon,
@@ -1223,10 +1186,16 @@ button.icon-button.simple:active,
 
 @media (max-width: 800px) {
   #betta_menu-button,
-  #betta_back-button {
+  #betta_back-button,
+  #betta_theme-button {
     top: auto;
     bottom: 1rem;
     left: calc(50vw - 2rem);
+    width: 4rem;
+    height: 4rem;
+  }
+
+  #betta_theme-button {
     width: 4rem;
     height: 4rem;
   }
@@ -1385,6 +1354,10 @@ button.dark:active:enabled {
   color: $color-main;
 }
 
+.dark button.icon-button img {
+  filter: brightness(1);
+}
+
 .dark .icon-button.filled .icon {
   color: $dark-color-main;
 }
@@ -1464,6 +1437,28 @@ button.dark:active:enabled {
   width: 12rem;
   display: inline-block;
   transition: $transition-default;
+}
+
+/* Simple button */
+
+button.icon-button.simple,
+.dark button.icon-button.simple {
+  background: none;
+  box-shadow: none;
+  opacity: 0.5;
+}
+
+@media (hover: hover) {
+  button.icon-button.simple:hover,
+  .dark button.icon-button.simple:hover {
+    background: none;
+    opacity: 1;
+  }
+}
+
+button.icon-button.simple:active,
+.dark button.icon-button.simple:active {
+  opacity: 0.75;
 }
 
 /*-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
