--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -116,6 +116,7 @@ body,
 nav,
 main,
 div,
+span,
 article,
 section,
 header,
@@ -1520,7 +1521,6 @@ between lines
 .inline-single,
 .inline-split,
 .inline-ternate {
-  box-sizing: border-box;
   display: inline-block;
   padding: 0 1rem 1rem 1rem;
   vertical-align: top;
@@ -1602,7 +1602,6 @@ between lines
 }
 
 .gallery-item {
-  box-sizing: border-box;
   vertical-align: top;
   display: inline-block;
   width: 50%;
@@ -1967,18 +1966,10 @@ a.card-double {
 
 a.card-double .betta_image,
 a.card-double .content {
+  display: inline-block;
   height: 100%;
   width: 50%;
-  display: inline-block;
   vertical-align: top;
-}
-
-a.card-double .betta_image {
-  width: 50%;
-}
-
-a.card-double .content {
-  width: 49.5%;
 }
 
 a.card-double .betta_image {
