Change properties to values

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -16,7 +16,7 @@ E.g. sass --watch betta-0.0.4.scss betta-0.0.4.css
 - .custom-icon, use .icon instead
 - betta_action-menu
 
-TEMP is used to denote properties that need to be changed
+TEMP is used to denote values that need to be changed
 ---------------------------------------*/
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
