Fix styling conflicts

--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -55,6 +55,10 @@ $dark-shadow-level-2: 0 2px 6px 1px rgba(0, 0, 0, 0.6);
 $shadow-level-2-i: 0 -2px 6px 1px rgba(0, 0, 0, 0.2);
 $dark-shadow-level-2-i: 0 -2px 6px 1px rgba(0, 0, 0, 0.6);
 
+/* level 3 */
+$shadow-level-3: 0 3px 8px 1px rgba(0, 0, 0, 0.2);
+$dark-shadow-level-3: 0 3px 8px 1px rgba(0, 0, 0, 0.6);
+
 /*---------------------------------------
   Font sizing
 ---------------------------------------*/
@@ -1178,6 +1182,24 @@ form textarea {
   height: 100%;
 }
 
+#betta_menu-button,
+#betta_home-button button,
+#betta_back-button button {
+  box-shadow: $shadow-level-3;
+}
+
+.dark #betta_menu-button,
+.dark #betta_home-button button,
+.dark #betta_back-button button {
+  box-shadow: $dark-shadow-level-3;
+}
+
+#betta_menu-button:active,
+#betta_home-button:active button,
+#betta_back-button:active button {
+  box-shadow: $shadow-level-0;
+}
+
 #betta_home-button img {
   height: auto;
 }
@@ -1256,14 +1278,16 @@ span.icon {
 span.icon > img {
   height: 1.5rem;
   width: 1.5rem;
-  line-height: 0rem;
-  color: $color-main;
+  line-height: 0;
 }
 
 .dark span.icon > img {
-  color: $dark-color-main;
-  background: $dark-color-secondary;
+  filter: none;
+}
+
+.dark p span.icon > img {
   border-radius: 50%;
+  background-color: $dark-color-secondary;
 }
 
 span.icon.big {
@@ -1464,11 +1488,6 @@ button.icon-button.simple,
   opacity: 0.5;
 }
 
-button.icon-button.simple,
-.dark button.icon-button.simple .icon img{
-  background: none;
-}
-
 @media (hover: hover) {
   button.icon-button.simple:hover,
   .dark button.icon-button.simple:hover {
@@ -1635,13 +1654,13 @@ between lines
 
 .photo > img {
   width: 100%;
-  box-shadow: $shadow-level-2;
+  box-shadow: $shadow-level-1;
   background: $color-accent;
   border-radius: 0.25rem;
 }
 
 .dark .photo > img {
-  box-shadow: $dark-shadow-level-2;
+  box-shadow: $dark-shadow-level-1;
   background: $dark-color-accent;
 }
 
@@ -1747,12 +1766,12 @@ a.card {
   margin: 1rem;
   border-color: $color-secondary;
   border-radius: 0.25rem;
-  box-shadow: $shadow-level-2;
+  box-shadow: $shadow-level-1;
   transition: $transition-default;
 }
 
 .dark a.card {
-  box-shadow: $dark-shadow-level-2;
+  box-shadow: $dark-shadow-level-1;
   border-color: $dark-color-secondary;
 }
 
@@ -1963,13 +1982,13 @@ a.card-double {
   margin-top: 3rem;
   border-color: $color-secondary;
   border-radius: 0.25rem;
-  box-shadow: $shadow-level-2;
+  box-shadow: $shadow-level-1;
   overflow: hidden;
   transition: $transition-default;
 }
 
 .dark a.card-double {
-  box-shadow: $dark-shadow-level-2;
+  box-shadow: $dark-shadow-level-1;
   border-color: $dark-color-secondary;
 }
 
@@ -2167,12 +2186,12 @@ a.card-double:active {
   height: 100%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: $shadow-level-2;
+  box-shadow: $shadow-level-1;
   border-radius: 0.25rem;
 }
 
 .dark .flip-card > .card {
-  box-shadow: $dark-shadow-level-2;
+  box-shadow: $dark-shadow-level-1;
 }
 
 .flip-card:hover > .card,
