--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -367,6 +367,7 @@ template {
 /* level 1 */
 /* level 2 */
 /* level 2 inversed */
+/* level 3 */
 /*---------------------------------------
   Font sizing
 ---------------------------------------*/
@@ -1457,6 +1458,24 @@ form textarea {
   height: 100%;
 }
 
+#betta_menu-button,
+#betta_home-button button,
+#betta_back-button button {
+  box-shadow: 0 3px 8px 1px rgba(0, 0, 0, 0.2);
+}
+
+.dark #betta_menu-button,
+.dark #betta_home-button button,
+.dark #betta_back-button button {
+  box-shadow: 0 3px 8px 1px rgba(0, 0, 0, 0.6);
+}
+
+#betta_menu-button:active,
+#betta_home-button:active button,
+#betta_back-button:active button {
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
+}
+
 #betta_home-button img {
   height: auto;
 }
@@ -1534,14 +1553,16 @@ span.icon {
 span.icon > img {
   height: 1.5rem;
   width: 1.5rem;
-  line-height: 0rem;
-  color: #212121;
+  line-height: 0;
 }
 
 .dark span.icon > img {
-  color: #E0E0E0;
-  background: #757575;
+  filter: none;
+}
+
+.dark p span.icon > img {
   border-radius: 50%;
+  background-color: #757575;
 }
 
 span.icon.big {
@@ -1741,11 +1762,6 @@ button.icon-button.simple,
   opacity: 0.5;
 }
 
-button.icon-button.simple,
-.dark button.icon-button.simple .icon img {
-  background: none;
-}
-
 @media (hover: hover) {
   button.icon-button.simple:hover,
 .dark button.icon-button.simple:hover {
@@ -1907,13 +1923,13 @@ between lines
 
 .photo > img {
   width: 100%;
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2);
   background: #f5f5f5;
   border-radius: 0.25rem;
 }
 
 .dark .photo > img {
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.6);
   background: #424242;
 }
 
@@ -2016,12 +2032,12 @@ a.card {
   margin: 1rem;
   border-color: #e0e0e0;
   border-radius: 0.25rem;
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2);
   transition: 0.2s;
 }
 
 .dark a.card {
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.6);
   border-color: #757575;
 }
 
@@ -2229,13 +2245,13 @@ a.card-double {
   margin-top: 3rem;
   border-color: #e0e0e0;
   border-radius: 0.25rem;
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   transition: 0.2s;
 }
 
 .dark a.card-double {
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.6);
   border-color: #757575;
 }
 
@@ -2430,12 +2446,12 @@ a.card-double .content {
   height: 100%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0.25rem;
 }
 
 .dark .flip-card > .card {
-  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.6);
 }
 
 .flip-card:hover > .card,
