--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -2025,6 +2025,7 @@ between lines
 a.card {
   position: relative;
   display: inline-block;
+  vertical-align: top;
   width: 25.5rem;
   max-width: 100%;
   padding: 0;
