--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -31,7 +31,7 @@ $color-accent: #f5f5f5 !default;
 $color-background: #ffffff !default;
 $color-active: #eeeeee !default;
 
-$dark-color-main: #E0E0E0 !default;
+$dark-color-main: #f5f5f5 !default;
 $dark-color-secondary: #757575 !default;
 $dark-color-accent: #424242 !default;
 $dark-color-background: #212121 !default;
