--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1221,8 +1221,7 @@ form textarea {
 
 @media (max-width: 800px) {
   #betta_menu-button,
-  #betta_back-button,
-  #betta_theme-button {
+  #betta_back-button {
     top: auto;
     bottom: 1rem;
     left: calc(50vw - 2rem);
