--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1532,6 +1532,11 @@ footer p a {
   margin: 0;
 }
 
+footer .logo {
+  max-width: 10rem;
+  margin: 2rem auto;
+}
+
 /*-------------------------------------*/
 /*---------------------------------------
 	Custom Icon Replacements for
