--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1256,6 +1256,11 @@ footer {
 footer p a {
   margin: 0;
 }
+
+footer .logo {
+  max-width: 10rem;
+  margin: 2rem auto;
+}
 /*-------------------------------------*/
 
 /*---------------------------------------
